Fixes: select on iOS + mobile controls

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   user-select: none;
   -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 body {
